Fixing meta data

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="img/avatar.png">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     
-    <title><%= VUE_APP_TITLE %></title>
-    <meta name="description" content="<%= VUE_APP_DESCRIPTION %>" />
-    <meta property="og:title" content="<%= VUE_APP_TITLE %>" />
-    <meta property="og:description" content="<%= VUE_APP_OGDESCRIPTION %>" />
-    <meta property="og:url" content="<%= VUE_APP_PRODUCTION_URL %>" />
-    <meta property="og:image" content="<%= VUE_APP_PRODUCTION_URL %>/img/avatar-og.png" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>M Akbar - Portfolio</title>
+    <meta name="description" content="Welcome to Muhammad Akbar's portfolio website showcasing projects and skills.">
+    <meta property="og:title" content="Muhammad Akbar - Portfolio">
+    <meta property="og:description" content="Welcome to Muhammad Akbar's portfolio website showcasing projects and skills.">
+    <meta property="og:url" content="http://akbardevs.me">
+    <meta property="og:image" content="http://akbardevs.me/img/avatar.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@akbardevs">
+    <meta name="twitter:title" content="Muhammad Akbar - Portfolio">
+    <meta name="twitter:description" content="Welcome to Muhammad Akbar's portfolio website showcasing projects and skills.">
+    <meta name="twitter:image" content="http://akbardevs.me/img/avatar.png">
+    <link rel="canonical" href="http://akbardevs.me">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   </head>
   <body>
