--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,8 +25,14 @@
     <meta name="twitter:title" content="Muhammad Akbar - Portfolio">
     <meta name="twitter:description" content="Welcome to Muhammad Akbar's portfolio website showcasing projects and skills.">
     <meta name="twitter:image" content="http://akbardevs.me/img/avatar.png">
+    <meta property="linkedin:card" content="summary_large_image">
+    <meta property="linkedin:title" content="Muhammad Akbar - Portfolio">
+    <meta property="linkedin:description" content="Welcome to Muhammad Akbar's portfolio website showcasing projects and skills.">
+    <meta property="linkedin:url" content="http://akbardevs.me">
+    <meta property="linkedin:image" content="http://akbardevs.me/img/avatar.png">
     <link rel="canonical" href="http://akbardevs.me">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
 
   </head>
   <body>
